force-app/main/default/objects/Post_Comments__c/Post_Comments__c.object-meta.xml
<CustomObject>
    <label>Post Comments</label>
    <nameField>
        <label>Post Comments Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Post Comments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>