force-app/main/default/objects/Post_Comments__c/fields/Commented_By__c.field-meta.xml
<CustomField>
    <fullName>Commented_By__c</fullName>
    <label>Commented By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>