force-app/main/default/objects/Post_Comments__c/fields/Post_comment_Time__c.field-meta.xml
<CustomField>
    <fullName>Post_comment_Time__c</fullName>
    <label>Post comment Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>