force-app/main/default/objects/Post_Comments__c/fields/Post_Comments_Name__c.field-meta.xml
<CustomField>
    <fullName>Post_Comments_Name__c</fullName>
    <label>Post Comments Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>