force-app/main/default/objects/Post_Comments__c/fields/Post_Url__c.field-meta.xml
<CustomField>
    <fullName>Post_Url__c</fullName>
    <label>Post Url</label>
    <type>Url</type>
</CustomField>