force-app/main/default/objects/Post_Comments__c/fields/Replied_Comments__c.field-meta.xml
<CustomField>
    <fullName>Replied_Comments__c</fullName>
    <label>Replied Comments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>